--- a/hobby.html
+++ b/hobby.html
@@ -6,7 +6,7 @@
     <title>Everaldo's Hobby</title>
   </head>
   <body>
-    <p><a href="./index.html">Hobby</a></p>
+    <p><a href="./index.html">Home</a></p>
     <p>I'm interested with games, astronomy, philosophy, memes, and sports</p>
   </body>
 </html>
